[package]
authors = ["ivanpierre <me@ivanpierre.world>"]
edition = "2018"
name    = "dynamic-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint      = "4.4.3"
im          = "15.0.0"
intertrait  = "0.2.1"
lazy_static = "1.4.0"
linkme      = "0.2.4"
mut_static  = "5.0.0"
rc          = "0.1.1"
